--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "sass": "^1.83.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
